# space_media_optimizer

./: ARCHITECTURE.md  Cargo.toml  FIXED_ARCHITECTURE.md  PERFORMANCE_FIX.md  README.md  build.sh  quick-start.sh  test_resolver.rs
scripts/: media-optimizer.sh  optimize_media.sh
src/: config.rs  error.rs  file_manager.rs  image_processor.rs  json_output.rs  lib.rs  main.rs  optimizer.rs  platform.rs  progress.rs  resize.rs  state.rs  tool_resolver.rs  utils.rs  video_processor.rs
src/optimizer/: media_optimizer.rs  mod.rs  path_resolver.rs  progress_tracker.rs  task_optimizer.rs
