[package]
name = "space_media_optimizer"
version = "0.1.0"
edition = "2021"
authors = ["Edoardo <edoardo@example.com>"]
description = "Efficient media optimization tool with smart deduplication"
license = "MIT"

[[bin]]
name = "media-optimizer"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Image processing - Only basic format detection, no in-memory processing
# All actual optimization is done by external tools for better performance
image = { version = "0.24", features = ["jpeg", "png", "webp"], default-features = false }

# File operations
walkdir = "2.0"
tempfile = "3.0"
dirs = "5.0"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Progress bars
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
